syntax = "proto3";

option csharp_namespace = "GrpsServer";

package meeting;
import "google/protobuf/timestamp.proto";

service Meeting 
{
	rpc Connect(ConnectRequest) returns (ConnectResponse);

	rpc stream MessageStream;

	rpc SendMessage (MessageRequest) returns (MessageResponse);
	rpc MessageStream (stream MessageRequest) returns (stream MessageFromLobby);
	rpc CameraCaptureStream (stream CameraCaptureTest) returns (stream CameraCaptureTest);
}

message ConnectRequest
{
	string username = 1;
	string lobbyPassword = 2;
}

message ConnectResponse
{
	bool isSuccessfully = 1;
	string errorMessage = 2;
	string guid = 3;
}

message CameraCaptureTest 
{
	string username = 1;
	bytes captureFrame = 2;
}

message MessageRequest 
{
	string userGuid = 1;
	string messageGuid = 2;
	string message = 3;
}

message MessageResponse 
{
	string messageGuid = 1;
	google.protobuf.Timestamp time = 2;
}

message MessageFromLobby
{
	string username = 1;
	string messageGuid = 2;
	string message = 3;
	google.protobuf.Timestamp time = 4;
}
